# axis-hfe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  paper.bib  paper.md  pyproject.toml  run_demo.bat
.claude/: settings.local.json
examples/: basic_usage.py
hypothesis_field/: __init__.py  _json_utils.py  _ollama_client.py  _security.py  constraint_engine.py  evaluator.py  field_engine.py  fusion_engine.py  generator.py  jump_explorer.py  models.py  relational_layer.py  self_corrector.py  vectorizer.py
hypothesis_field/_providers/: __init__.py  _anthropic.py  _base.py  _gemini.py  _ollama.py  _openai.py
tests/: test_hfe.py
