[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axis-hfe"
version = "0.2.0"
description = "Hypothesis Field Engine — 多次元空間推論ライブラリ"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Da-P", email = "tadashi.mazusaki.1@gmail.com" }]
keywords = ["AI", "reasoning", "hypothesis", "LLM", "multi-dimensional", "ollama", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# コア依存（Ollama は httpx のみ）
dependencies = [
    "httpx>=0.27,<2.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
openai    = ["openai>=1.0,<3.0"]
anthropic = ["anthropic>=0.20,<2.0"]
all       = ["openai>=1.0,<3.0", "anthropic>=0.20,<2.0"]
dev       = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage   = "https://github.com/Da-P-AIP/axis-hfe"
Repository = "https://github.com/Da-P-AIP/axis-hfe"

[tool.setuptools.packages.find]
include = ["hypothesis_field*"]

[tool.setuptools.package-data]
hypothesis_field = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
